# evdm_project

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  cmd.bat  conanfile.txt
Formulas/: GeneratoParkMilller.txt  types_table.xlsx
Formulas/Formulas/: DM_Dynamic.aux  DM_Dynamic.fdb_latexmk  DM_Dynamic.fls  DM_Dynamic.out  DM_Dynamic.tex  Inhomoginity.md  math_defs.tex  preamble.tex
Formulas/Formulas/imags/: diagramm1.py
Formulas/Formulas/src/: FullMC.tex  OptBin.tex
NuclearFormFactors/: FormFactorsTest.ipynb  NuFF.py  ff.py  form_factor_dict.txt  mass_dict.txt  ntEFT.tex  nuclear_factors.py  supported_elemtnts.txt
NucleiFormFactors/: NuFF.py  ntEFT (1).tex  ntEFT.tex  ntEFT_pre.txt
cmake/: scatter_config.cmake  type_properties.cmake
evdm/: body_potential.hpp  core.hpp  core_dynamics.hpp  form_factors.hpp  grid_variants.hpp  histo_norm.hpp  measure.hpp  phase_volume.hpp  print_distrib.hpp  print_grid.hpp  prng.hpp  r_conv_util.hpp  r_conversion.hpp  traj_pool.hpp  trajectory.hpp  triangulation.hpp
evdm/core/: core.hpp  core_annihilation.hpp  core_body.hpp  core_distrib.hpp  core_distrib_sampler.hpp  core_dynamics_capture.hpp  core_dynamics_scatter.hpp  core_evolutor.hpp  core_grid.hpp  core_matrix.hpp  core_project.hpp
evdm/dynamics/: body_model_tools.hpp  dynamic_evolutor_funcs.hpp  dynamics.hpp  dynamics_annihilation.hpp  dynamics_capture.hpp  dynamics_evolutor.hpp  dynamics_scatter.hpp  nonlinev_funcs.hpp
evdm/utils/: discret_generator.hpp  integration.hpp  math_external.hpp  mc.hpp  polynom.hpp  pool_allocator.hpp  prng.hpp  progress_bar.hpp  put_optimization.hpp  quadtree.hpp  type_tr.hpp  variant_tools.hpp
evdm_python/: annihilation.hpp  body_model.cpp  body_python.hpp  capture.cpp  capture_python.hpp  core_python.hpp  core_python_defs.cpp  debugdef.hpp  distrib_python.hpp  distribution.cpp  dynamic_python.hpp  el_grid.cpp  grid_python.hpp  grob_python.hpp  matrix.cpp  matrix_python.hpp  omp_mgmt.h  progress_log.hpp  pyannihilation.cpp  pycapture_process.cpp  pydynamics.cpp  pyevdm.cpp  pyevolutor.cpp  pygridproj.cpp  pygridproj.hpp  pymarkov.cpp  pyscatter.cpp  pyscatter_process.cpp  scatter_event_info.cpp  value_types.hpp
evdm_python/GPUCache/: data_1  index
evdm_python/scatter_impl/: dist_sampler.hpp  distr_sample.cpp  scatter_impl.cpp.in  scatter_impl.hpp  scatter_impl_defs.hpp  scatter_impl_defs.hpp.in
evdm_python/scatter_impl/cppimpl1/: scat_impl_diff.cpp  scat_impl_naive.cpp  scat_impl_shift.cpp
evdm_python_example/: example_body_model.ipynb  example_capture.ipynb  example_form_factors.ipynb  example_grid.ipynb
evdm_python_package_files/: _test.ipynb  pyproject.toml.in
evdm_python_package_files/evdm/: __init__.py  _interfaces.py  _serialize.py  dm_model.py  evolve.py  ff.py  pbar.py  utils.py
evdm_python_package_files/evdm/_cpp_lib/: pyevdm.pyi  stubgen.txt
evdm_python_package_files/evdm/_form_factors/: _ffee_info.py  _form_factors.py  _isotopes.py  _latex_names.py  _nuc_info.py  _symbols.py
performance_tests/: out.asm  poly.asm  poly_eval_test.cpp  poly_test.cpp  poly_test.s  simd_test.asm  simd_test.cpp  sum_vecto_test.cpp
tests/: test_capture.cpp
work_test/: P01_test_EL_grid.cpp  debugdef.hpp
work_test/form_factors/: test_align_ret.cpp  test_ff.cpp
